# warehpouse

./: server_daily_report.py
RunningPeppa/: CMakeLists.txt  global.h  header.h  homepage.c  homepage.h  initiating.c  initiating.h  main.c  obstacle.c  obstacle.h  pages.c  pages.h  peppa.c  peppa.h  shutdown.c  shutdown.h  status.c  status.h
c_code/: CMakeLists.txt  PI.cpp  aSCIii.cpp  b-ternary-1.c  b-ternary-2.c  b-ternary-3.c  binalise.c  bubble.c.cpp  collatz.c  compare.cpp  days.cpp  debugTest.cpp  dh.cpp  factorial.c  flip.c  guess_number.cpp  inverse.c  julian.cpp  main.cpp  matrics.c  matrix-mult.c  mine.c  palindrome-2.c  palindrome1.c  series.c  single.c  standup.c  sudoku.c
