cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        guess_number.cpp
        compare.cpp
        cmake-build-debug/aSCIii.cpp
        cmake-build-debug/rmb.cpp
        PI.cpp
        days.cpp
        julian.cpp
        cmake-build-debug/CMakeFiles/gravity.cpp
        cmake-build-debug/CMakeFiles/untitled.dir/equation.cpp)
