
cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        main.exe
        main.cpp
        aSCIii.cpp
        cmake-build-debug/CMakeFiles/gravity.cpp
        cmake-build-debug/CMakeFiles/untitled.dir/equation.cpp
        factorial.c
        single.c
        series.c
        standup.c
        collatz.c
        inverse.c
        palindrome1.c
        flip.c
        b-ternary-1.c
        b-ternary-2.c
        jojo.c
        bubble.c.cpp
        binalise.c
        b-ternary-3.c
        palindrome-2.c
        matrics.c
        sudoku.c
        matrix-mult.c
        mine.c
)

